--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,12 +2,15 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
+- bases/valheim.zingerweb.services_valheimverticalscalers.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
+#- patches/webhook_in_valheimverticalscalers.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
+#- patches/cainjection_in_valheimverticalscalers.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
