--- a/config/rbac/valheimverticalscaler_editor_role.yaml
+++ b/config/rbac/valheimverticalscaler_editor_role.yaml
@@ -1,10 +1,8 @@
-
----
+# permissions for end users to edit valheimverticalscalers.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
-  name: manager-role
+  name: valheimverticalscaler-editor-role
 rules:
 - apiGroups:
   - valheim.zingerweb.services
@@ -21,14 +19,6 @@ rules:
 - apiGroups:
   - valheim.zingerweb.services
   resources:
-  - valheimverticalscalers/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - valheim.zingerweb.services
-  resources:
   - valheimverticalscalers/status
   verbs:
   - get
-  - patch
-  - update
