--- a/config/rbac/valheimverticalscaler_viewer_role.yaml
+++ b/config/rbac/valheimverticalscaler_viewer_role.yaml
@@ -1,34 +1,20 @@
-
----
+# permissions for end users to view valheimverticalscalers.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
-  name: manager-role
+  name: valheimverticalscaler-viewer-role
 rules:
 - apiGroups:
   - valheim.zingerweb.services
   resources:
   - valheimverticalscalers
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
-- apiGroups:
-  - valheim.zingerweb.services
-  resources:
-  - valheimverticalscalers/finalizers
-  verbs:
-  - update
 - apiGroups:
   - valheim.zingerweb.services
   resources:
   - valheimverticalscalers/status
   verbs:
   - get
-  - patch
-  - update
