--- a/config/crd/bases/valheim.zingerweb.services_valheimverticalscalers.yaml
+++ b/config/crd/bases/valheim.zingerweb.services_valheimverticalscalers.yaml
@@ -19,7 +19,10 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.state
+    - jsonPath: .spec.scale
+      name: Scale
+      type: string
+    - jsonPath: .status.phase
       name: Phase
       type: string
     name: v1beta1
@@ -49,19 +52,29 @@ spec:
                   credentialSecretName:
                     description: Name of a Secret containing the keys "accessKeyId"
                       and "secretAccessKey".
+                    minLength: 1
+                    pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                     type: string
                   domain:
                     description: Advertised domain of the server. Must live in Route53.
+                    minLength: 1
+                    pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                     type: string
                   instanceID:
                     description: EC2 instance ID.
+                    minLength: 1
+                    pattern: ^i-[a-z0-9]{17}$
                     type: string
                   privateKeySecretName:
                     description: Name of a Secret containing the private key for connecting
                       to the EC2 instance.
+                    minLength: 1
+                    pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
                     type: string
                   region:
                     description: Region of the EC2 instance.
+                    minLength: 1
+                    pattern: ^[a-z]{2}-[a-z]{4,}-\d$
                     type: string
                 required:
                 - credentialSecretName
@@ -112,12 +125,10 @@ spec:
               phase:
                 description: Basic state of the Valheim server.
                 enum:
-                - Initializing
+                - Ready
                 - Error
                 - ScalingUp
-                - Up
                 - ScalingDown
-                - Down
                 type: string
             type: object
         type: object
